--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
     "socket.io": "^4.8.1"
